Updated to support standard input from user